<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>atlas</groupId>
    <artifactId>atlas-wrg</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>wrg-base</module>
        <module>wrg-api</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>14</source>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <target>14</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>mavenapache</id>
            <name>mavenapache</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>repsy</id>
            <name>heavenms</name>
            <url>https://repo.repsy.io/mvn/jtumidanski/default</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>repsy</id>
            <name>HeavenMS Repo</name>
            <url>https://repo.repsy.io/mvn/jtumidanski/default</url>
        </repository>
    </distributionManagement>
</project>